--- a/index.html
+++ b/index.html
@@ -11,23 +11,23 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body>
     <!-- Headers -->
 
-    <header>
+    <header class="page-header">
       <!-- Navigation on the page -->
 
-      <nav>
-        <a href="./portfolio.html">WebStudio</a>
+      <nav class="header-nav">
+        <a href="./index.html">Web<span>Studio</span></a>
         <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
+          <li><a href="./index.html">Studio</a></li>
+          <li><a href="./portfolio.html">Portfolio</a></li>
           <li><a href="">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address class="contacts">
         <ul>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
@@ -40,15 +40,15 @@
     <main>
       <!-- Section Hero -->
 
-      <section>
+      <section class="hero">
         <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
 
       <!-- Section Feature -->
 
-      <section>
-        <h2>Feature</h2>
+      <section class="feature">
+        <h2 hidden>Feature</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -83,7 +83,7 @@
 
       <!-- Section  What are we doing -->
 
-      <section>
+      <section class="gadged">
         <h2>What are we doing</h2>
         <ul>
           <li>
@@ -100,7 +100,7 @@
 
       <!-- Section Our Team -->
 
-      <section>
+      <section class="team">
         <h2>Our Team</h2>
         <ul>
           <li>
@@ -141,8 +141,8 @@
 
     <!-- Footer -->
 
-    <footer>
-      <a href="./index.html">WebStudio</a>
+    <footer class="footer">
+      <a href="./index.html">Web<span>Studio</span></a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
