--- a/portfolio.html
+++ b/portfolio.html
@@ -11,23 +11,23 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body>
     <!-- Headers -->
 
-    <header>
+    <header class="page-header">
       <!-- Navigation on the page -->
 
-      <nav>
-        <a href="./index.html">WebStudio</a>
+      <nav class="header-nav">
+        <a href="./index.html">Web<span>Studio</span></a>
         <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
+          <li><a href="./index.html">Studio</a></li>
+          <li><a href="./portfolio.html">Portfolio</a></li>
           <li><a href="">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address class="contacts">
         <ul>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
@@ -38,167 +38,170 @@
     <!-- Main block -->
 
     <main>
-      <h1>Portfolio</h1>
+      <h1 hidden>Portfolio</h1>
       <!-- Section button -->
-
-      <ul>
-        <li><button type="button">All</button></li>
-        <li><button type="button">Web Site</button></li>
-        <li><button type="button">App</button></li>
-        <li><button type="button">Design</button></li>
-        <li><button type="button">Marketing</button></li>
-      </ul>
+      <section class="porfolio">
+        <ul>
+          <li><button type="button">All</button></li>
+          <li><button type="button">Web Site</button></li>
+          <li><button type="button">App</button></li>
+          <li><button type="button">Design</button></li>
+          <li><button type="button">Marketing</button></li>
+        </ul>
+      </section>
 
       <!-- Section Cards -->
 
-      <ul>
-        <li>
-          <a href="">
-            <img
-              src="./images/app/bankingapp.jpg"
-              alt="bankingapp"
-              width="360"
-            />
-            <h2>Banking App Interface Concept</h2>
-            <p>App</p>
-            <p>
-              14 Stylish and User-Friendly App Design Concepts · Task Manager
-              App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-              Storage App
-            </p>
-          </a>
-        </li>
-        <li>
-          <a href="">
-            <img
-              src="/images/app/cashlesspayment.jpg"
-              alt="cashlesspayment"
-              width="360"
-            />
-            <h2>Cashless Payment</h2>
-            <p>Marketing</p>
-            <p>
-              14 Stylish and User-Friendly App Design Concepts · Task Manager
-              App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-              Storage App
-            </p>
-          </a>
-        </li>
-        <li>
-          <a href="">
-            <img
-              src="/images/app/meditationapp.jpg"
-              alt="meditationapp"
-              width="360"
-            />
-            <h2>Meditation App</h2>
-            <p>App</p>
-            <p>
-              14 Stylish and User-Friendly App Design Concepts · Task Manager
-              App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-              Storage App
-            </p>
-          </a>
-        </li>
-        <li>
-          <a href="">
-            <img
-              src="/images/app/taxiservice.jpg"
-              alt="taxiservice"
-              width="360"
-            />
-            <h2>Taxi Service</h2>
-            <p>Marketing</p>
-            <p>
-              14 Stylish and User-Friendly App Design Concepts · Task Manager
-              App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-              Storage App
-            </p>
-          </a>
-        </li>
-        <li>
-          <a href="">
-            <img
-              src="/images/app/screenillustration.jpg"
-              alt="screenillustration"
-              width="360"
-            />
-            <h2>Screen Illustrations</h2>
-            <p>Design</p>
-            <p>
-              14 Stylish and User-Friendly App Design Concepts · Task Manager
-              App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-              Storage App
-            </p>
-          </a>
-        </li>
-        <li>
-          <a href="">
-            <img
-              src="/images/app/onlinecourses.jpg"
-              alt="onlinecourses"
-              width="360"
-            />
-            <h2>Online Courses</h2>
-            <p>Marketing</p>
-            <p>
-              14 Stylish and User-Friendly App Design Concepts · Task Manager
-              App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-              Storage App
-            </p>
-          </a>
-        </li>
-        <li>
-          <a href="">
-            <img
-              src="./images/app/instagramstories.jpg"
-              alt="instagramstories"
-              width="360"
-            />
-            <h2>Instagram Stories Concept</h2>
-            <p>Design</p>
-            <p>
-              14 Stylish and User-Friendly App Design Concepts · Task Manager
-              App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-              Storage App
-            </p>
-          </a>
-        </li>
-        <li>
-          <a href="">
-            <img
-              src="./images/app/organicfood.jpg"
-              alt="organicfood"
-              width="360"
-            />
-            <h2>Organic Food</h2>
-            <p>Web Site</p>
-            <p>
-              14 Stylish and User-Friendly App Design Concepts · Task Manager
-              App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-              Storage App
-            </p>
-          </a>
-        </li>
-        <li>
-          <a href="">
-            <img src="./images/app/coffee.jpg" alt="coffee" width="360" />
-            <h2>Fresh Coffee</h2>
-            <p>Web Site</p>
-            <p>
-              14 Stylish and User-Friendly App Design Concepts · Task Manager
-              App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
-              Storage App
-            </p>
-          </a>
-        </li>
-      </ul>
+      <section class="cards">
+        <ul>
+          <li>
+            <a href="">
+              <img
+                src="./images/app/bankingapp.jpg"
+                alt="bankingapp"
+                width="360"
+              />
+              <h2>Banking App Interface Concept</h2>
+              <p>App</p>
+              <p>
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
+              </p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="/images/app/cashlesspayment.jpg"
+                alt="cashlesspayment"
+                width="360"
+              />
+              <h2>Cashless Payment</h2>
+              <p>Marketing</p>
+              <p>
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
+              </p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="/images/app/meditationapp.jpg"
+                alt="meditationapp"
+                width="360"
+              />
+              <h2>Meditation App</h2>
+              <p>App</p>
+              <p>
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
+              </p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="/images/app/taxiservice.jpg"
+                alt="taxiservice"
+                width="360"
+              />
+              <h2>Taxi Service</h2>
+              <p>Marketing</p>
+              <p>
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
+              </p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="/images/app/screenillustration.jpg"
+                alt="screenillustration"
+                width="360"
+              />
+              <h2>Screen Illustrations</h2>
+              <p>Design</p>
+              <p>
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
+              </p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="/images/app/onlinecourses.jpg"
+                alt="onlinecourses"
+                width="360"
+              />
+              <h2>Online Courses</h2>
+              <p>Marketing</p>
+              <p>
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
+              </p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="./images/app/instagramstories.jpg"
+                alt="instagramstories"
+                width="360"
+              />
+              <h2>Instagram Stories Concept</h2>
+              <p>Design</p>
+              <p>
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
+              </p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img
+                src="./images/app/organicfood.jpg"
+                alt="organicfood"
+                width="360"
+              />
+              <h2>Organic Food</h2>
+              <p>Web Site</p>
+              <p>
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
+              </p>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <img src="./images/app/coffee.jpg" alt="coffee" width="360" />
+              <h2>Fresh Coffee</h2>
+              <p>Web Site</p>
+              <p>
+                14 Stylish and User-Friendly App Design Concepts · Task Manager
+                App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
+                Storage App
+              </p>
+            </a>
+          </li>
+        </ul>
+      </section>
     </main>
 
     <!-- Footer -->
 
-    <footer>
-      <a href="./index.html">WebStudio</a>
+    <footer class="footer">
+      <a href="./index.html">Web<span>Studio</span></a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
