--- a/index.html
+++ b/index.html
@@ -16,21 +16,21 @@
   <body>
     <!-- Headers -->
 
-    <header class="page-header">
+    <header>
       <!-- Navigation on the page -->
 
-      <nav class="header-nav">
-        <a href="./index.html">Web<span>Studio</span></a>
-        <ul>
-          <li><a href="./index.html">Studio</a></li>
-          <li><a href="./portfolio.html">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+      <nav class="site-nav">
+        <a class="link" href="./index.html">Web<span class="top-logo">Studio</span></a>
+        <ul class="list">
+          <li><a class="link" href="./index.html">Studio</a></li>
+          <li><a class="link" href="./portfolio.html">Portfolio</a></li>
+          <li><a class="link" href="">Contacts</a></li>
         </ul>
       </nav>
-      <address class="contacts">
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      <address class="site-cont">
+        <ul class="list">
+          <li"><a class="mail link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li"><a class="tel link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
@@ -41,15 +41,15 @@
       <!-- Section Hero -->
 
       <section class="hero">
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <button class="button" type="button">Order Service</button>
       </section>
 
       <!-- Section Feature -->
 
       <section class="feature">
         <h2 hidden>Feature</h2>
-        <ul>
+        <ul class="list">
           <li>
             <h3>Strategy</h3>
             <p>
@@ -85,7 +85,7 @@
 
       <section class="gadged">
         <h2>What are we doing</h2>
-        <ul>
+        <ul class="list">
           <li>
             <img src="./images/gadjet/PC.jpg" alt="PC" width="360" />
           </li>
@@ -102,7 +102,7 @@
 
       <section class="team">
         <h2>Our Team</h2>
-        <ul>
+        <ul class="list">
           <li>
             <img
               src="./images/team/MarkGuerrero.jpg"
@@ -142,7 +142,7 @@
     <!-- Footer -->
 
     <footer class="footer">
-      <a href="./index.html">Web<span>Studio</span></a>
+      <a class="link" href="./index.html">Web<span class="under-logo">Studio</span></a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
