--- a/portfolio.html
+++ b/portfolio.html
@@ -16,21 +16,21 @@
   <body>
     <!-- Headers -->
 
-    <header class="page-header">
+    <header>
       <!-- Navigation on the page -->
-
-      <nav class="header-nav">
-        <a href="./index.html">Web<span>Studio</span></a>
-        <ul>
-          <li><a href="./index.html">Studio</a></li>
-          <li><a href="./portfolio.html">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+    
+      <nav class="site-nav">
+        <a class="link" href="./index.html">Web<span class="top-logo">Studio</span></a>
+        <ul class="list">
+          <li><a class="link" href="./index.html">Studio</a></li>
+          <li><a class="link" href="./portfolio.html">Portfolio</a></li>
+          <li><a class="link" href="">Contacts</a></li>
         </ul>
       </nav>
-      <address class="contacts">
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      <address class="site-cont">
+        <ul class="list">
+          <li"><a class="mail link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li"><a class="tel link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
@@ -41,7 +41,7 @@
       <h1 hidden>Portfolio</h1>
       <!-- Section button -->
       <section class="porfolio">
-        <ul>
+        <ul class="list">
           <li><button type="button">All</button></li>
           <li><button type="button">Web Site</button></li>
           <li><button type="button">App</button></li>
@@ -53,9 +53,9 @@
       <!-- Section Cards -->
 
       <section class="cards">
-        <ul>
+        <ul class="list">
           <li>
-            <a href="">
+            <a class="link" href="">
               <img
                 src="./images/app/bankingapp.jpg"
                 alt="bankingapp"
@@ -71,7 +71,7 @@
             </a>
           </li>
           <li>
-            <a href="">
+            <a class="link" href="">
               <img
                 src="/images/app/cashlesspayment.jpg"
                 alt="cashlesspayment"
@@ -87,7 +87,7 @@
             </a>
           </li>
           <li>
-            <a href="">
+            <a class="link" href="">
               <img
                 src="/images/app/meditationapp.jpg"
                 alt="meditationapp"
@@ -103,7 +103,7 @@
             </a>
           </li>
           <li>
-            <a href="">
+            <a class="link" href="">
               <img
                 src="/images/app/taxiservice.jpg"
                 alt="taxiservice"
@@ -119,7 +119,7 @@
             </a>
           </li>
           <li>
-            <a href="">
+            <a class="link" href="">
               <img
                 src="/images/app/screenillustration.jpg"
                 alt="screenillustration"
@@ -135,7 +135,7 @@
             </a>
           </li>
           <li>
-            <a href="">
+            <a class="link" href="">
               <img
                 src="/images/app/onlinecourses.jpg"
                 alt="onlinecourses"
@@ -151,7 +151,7 @@
             </a>
           </li>
           <li>
-            <a href="">
+            <a class="link" href="">
               <img
                 src="./images/app/instagramstories.jpg"
                 alt="instagramstories"
@@ -167,7 +167,7 @@
             </a>
           </li>
           <li>
-            <a href="">
+            <a class="link" href="">
               <img
                 src="./images/app/organicfood.jpg"
                 alt="organicfood"
@@ -183,7 +183,7 @@
             </a>
           </li>
           <li>
-            <a href="">
+            <a class="link" href="">
               <img src="./images/app/coffee.jpg" alt="coffee" width="360" />
               <h2>Fresh Coffee</h2>
               <p>Web Site</p>
@@ -201,7 +201,7 @@
     <!-- Footer -->
 
     <footer class="footer">
-      <a href="./index.html">Web<span>Studio</span></a>
+      <a class="link" href="./index.html">Web<span class="under-logo">Studio</span></a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
