--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <!-- Navigation on the page -->
 
       <nav class="site-nav">
-        <a class="link" href="./index.html">Web<span class="top-logo">Studio</span></a>
+        <a class="link top-link" href="./index.html">Web<span class="top-logo">Studio</span></a>
         <ul class="list">
           <li><a class="link" href="./index.html">Studio</a></li>
           <li><a class="link" href="./portfolio.html">Portfolio</a></li>
@@ -42,37 +42,37 @@
 
       <section class="hero">
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button class="button" type="button">Order Service</button>
+        <button class="hero-button" type="button">Order Service</button>
       </section>
 
       <!-- Section Feature -->
 
-      <section class="feature">
-        <h2 hidden>Feature</h2>
+      <section class="section">
+        <h2 class="section-title" hidden>Feature</h2>
         <ul class="list">
           <li>
-            <h3>Strategy</h3>
+            <h3 class="section-subtitle">Strategy</h3>
             <p>
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
+            <h3 class="section-subtitle">Punctuality</h3>
             <p>
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
+            <h3 class="section-subtitle">Diligence</h3>
             <p>
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
+            <h3 class="section-subtitle">Technologies</h3>
             <p>
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -83,8 +83,8 @@
 
       <!-- Section  What are we doing -->
 
-      <section class="gadged">
-        <h2>What are we doing</h2>
+      <section class="section">
+        <h2 class="section-title">What are we doing</h2>
         <ul class="list">
           <li>
             <img src="./images/gadjet/PC.jpg" alt="PC" width="360" />
@@ -100,39 +100,39 @@
 
       <!-- Section Our Team -->
 
-      <section class="team">
-        <h2>Our Team</h2>
+      <section class="section team">
+        <h2 class="section-title">Our Team</h2>
         <ul class="list">
-          <li>
+          <li class="team-item">
             <img
               src="./images/team/MarkGuerrero.jpg"
               alt="Mark Guerrero"
               width="264"
             />
-            <h3>Mark Guerrero</h3>
+            <h3 class="section-subtitle">Mark Guerrero</h3>
             <p>Product Designer</p>
-          </li>
-          <li>
+          </li class="team-item">
+          <li class="team-item">
             <img src="./images/team/TomFord.jpg" alt="Tom Ford" width="264" />
-            <h3>Tom Ford</h3>
+            <h3 class="section-subtitle">Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/team/CamilaGarcia.jpg"
               alt="Camila Garcia"
               width="264"
             />
-            <h3>Camila Garcia</h3>
+            <h3 class="section-subtitle">Camila Garcia</h3>
             <p>Marketing</p>
-          </li>
-          <li>
+          </li class="team-item">
+          <li class="team-item">
             <img
               src="./images/team/DanielWilson.jpg"
               alt="Daniel Wilson"
               width="264"
             />
-            <h3>Daniel Wilson</h3>
+            <h3 class="section-subtitle">Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
         </ul>
@@ -143,7 +143,7 @@
 
     <footer class="footer">
       <a class="link" href="./index.html">Web<span class="under-logo">Studio</span></a>
-      <p>
+      <p class="slogan">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
