--- a/portfolio.html
+++ b/portfolio.html
@@ -126,8 +126,8 @@
                 width="360"
               />
               <h2 class="section-title">Screen Illustrations</h2>
-              <p class="section-card" class="section-card">Design</p>
-              <p class="section-card" class="section-card">
+              <p class="section-card">Design</p>
+              <p class="section-card">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager
                 App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud
                 Storage App
