--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
       </nav>
       <address class="site-cont">
         <ul class="list">
-          <li"><a class="mail link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li"><a class="tel link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li><a class="mail link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a class="tel link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
