--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
       <!-- Navigation on the page -->
 
       <nav class="site-nav">
-        <a class="link top-link" href="./index.html">Web<span class="top-logo">Studio</span></a>
+        <a class="link top-link" href="./index.html"
+          >Web<span class="top-logo">Studio</span></a
+        >
         <ul class="list">
           <li><a class="link" href="./index.html">Studio</a></li>
           <li><a class="link" href="./portfolio.html">Portfolio</a></li>
@@ -29,8 +31,14 @@
       </nav>
       <address class="site-cont">
         <ul class="list">
-          <li><a class="mail link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a class="tel link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li>
+            <a class="mail link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="tel link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
         </ul>
       </address>
     </header>
@@ -111,7 +119,7 @@
             />
             <h3 class="section-subtitle">Mark Guerrero</h3>
             <p>Product Designer</p>
-          </li class="team-item">
+          </li>
           <li class="team-item">
             <img src="./images/team/TomFord.jpg" alt="Tom Ford" width="264" />
             <h3 class="section-subtitle">Tom Ford</h3>
@@ -125,7 +133,7 @@
             />
             <h3 class="section-subtitle">Camila Garcia</h3>
             <p>Marketing</p>
-          </li class="team-item">
+          </li>
           <li class="team-item">
             <img
               src="./images/team/DanielWilson.jpg"
@@ -142,7 +150,9 @@
     <!-- Footer -->
 
     <footer class="footer">
-      <a class="link" href="./index.html">Web<span class="under-logo">Studio</span></a>
+      <a class="link" href="./index.html"
+        >Web<span class="under-logo">Studio</span></a
+      >
       <p class="slogan">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
