--- a/portfolio.html
+++ b/portfolio.html
@@ -96,7 +96,7 @@
           <li>
             <a class="link" href="">
               <img
-                src="/images/app/meditationapp.jpg"
+                src="./images/app/meditationapp.jpg"
                 alt="meditationapp"
                 width="360"
               />
@@ -112,7 +112,7 @@
           <li>
             <a class="link" href="">
               <img
-                src="/images/app/taxiservice.jpg"
+                src="./images/app/taxiservice.jpg"
                 alt="taxiservice"
                 width="360"
               />
@@ -128,7 +128,7 @@
           <li>
             <a class="link" href="">
               <img
-                src="/images/app/screenillustration.jpg"
+                src="./images/app/screenillustration.jpg"
                 alt="screenillustration"
                 width="360"
               />
@@ -144,7 +144,7 @@
           <li>
             <a class="link" href="">
               <img
-                src="/images/app/onlinecourses.jpg"
+                src="./images/app/onlinecourses.jpg"
                 alt="onlinecourses"
                 width="360"
               />
