--- a/portfolio.html
+++ b/portfolio.html
@@ -80,7 +80,7 @@
           <li>
             <a class="link" href="">
               <img
-                src="/images/app/cashlesspayment.jpg"
+                src="./images/app/cashless.jpg"
                 alt="cashlesspayment"
                 width="360"
               />
