--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
       <address class="site-cont">
         <ul class="list">
           <li>
-            <a class="mail link" href="mailto:info@devstudio.com"
+            <a class="link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a class="tel link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
