--- a/portfolio.html
+++ b/portfolio.html
@@ -68,7 +68,9 @@
                 alt="bankingapp"
                 width="360"
               />
-              <h2 class="section-title">Banking App Interface Concept</h2>
+              <h2 class="section-title card-title">
+                Banking App Interface Concept
+              </h2>
               <p class="section-card">App</p>
               <p class="section-card">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager
@@ -84,7 +86,7 @@
                 alt="cashlesspayment"
                 width="360"
               />
-              <h2 class="section-title">Cashless Payment</h2>
+              <h2 class="section-title card-title">Cashless Payment</h2>
               <p class="section-card">Marketing</p>
               <p class="section-card">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager
@@ -100,7 +102,7 @@
                 alt="meditationapp"
                 width="360"
               />
-              <h2 class="section-title">Meditation App</h2>
+              <h2 class="section-title card-title">Meditation App</h2>
               <p class="section-card">App</p>
               <p class="section-card">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager
@@ -116,7 +118,7 @@
                 alt="taxiservice"
                 width="360"
               />
-              <h2 class="section-title">Taxi Service</h2>
+              <h2 class="section-title card-title">Taxi Service</h2>
               <p class="section-card">Marketing</p>
               <p class="section-card">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager
@@ -132,7 +134,7 @@
                 alt="screenillustration"
                 width="360"
               />
-              <h2 class="section-title">Screen Illustrations</h2>
+              <h2 class="section-title card-title">Screen Illustrations</h2>
               <p class="section-card">Design</p>
               <p class="section-card">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager
@@ -148,7 +150,7 @@
                 alt="onlinecourses"
                 width="360"
               />
-              <h2 class="section-title">Online Courses</h2>
+              <h2 class="section-title card-title">Online Courses</h2>
               <p class="section-card">Marketing</p>
               <p class="section-card">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager
@@ -164,7 +166,9 @@
                 alt="instagramstories"
                 width="360"
               />
-              <h2 class="section-title">Instagram Stories Concept</h2>
+              <h2 class="section-title card-title">
+                Instagram Stories Concept
+              </h2>
               <p class="section-card">Design</p>
               <p class="section-card">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager
@@ -180,7 +184,7 @@
                 alt="organicfood"
                 width="360"
               />
-              <h2 class="section-title">Organic Food</h2>
+              <h2 class="section-title card-title">Organic Food</h2>
               <p class="section-card">Web Site</p>
               <p class="section-card">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager
@@ -192,7 +196,7 @@
           <li>
             <a class="link" href="">
               <img src="./images/app/coffee.jpg" alt="coffee" width="360" />
-              <h2 class="section-title">Fresh Coffee</h2>
+              <h2 class="section-title card-title">Fresh Coffee</h2>
               <p class="section-card">Web Site</p>
               <p class="section-card">
                 14 Stylish and User-Friendly App Design Concepts · Task Manager
