--- a/index.html
+++ b/index.html
@@ -60,28 +60,28 @@
         <ul class="list">
           <li>
             <h3 class="section-subtitle">Strategy</h3>
-            <p>
+            <p class="section-item">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
             <h3 class="section-subtitle">Punctuality</h3>
-            <p>
+            <p class="section-item">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
-            </p>
+            </p class="section-item">
           </li>
           <li>
             <h3 class="section-subtitle">Diligence</h3>
-            <p>
+            <p class="section-item">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
             <h3 class="section-subtitle">Technologies</h3>
-            <p>
+            <p class="section-item">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -118,12 +118,12 @@
               width="264"
             />
             <h3 class="section-subtitle">Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <p class="section-item">Product Designer</p>
           </li>
           <li class="team-item">
             <img src="./images/team/TomFord.jpg" alt="Tom Ford" width="264" />
             <h3 class="section-subtitle">Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <p class="section-item">Frontend Developer</p>
           </li>
           <li class="team-item">
             <img
@@ -132,7 +132,7 @@
               width="264"
             />
             <h3 class="section-subtitle">Camila Garcia</h3>
-            <p>Marketing</p>
+            <p class="section-item">Marketing</p>
           </li>
           <li class="team-item">
             <img
@@ -141,7 +141,7 @@
               width="264"
             />
             <h3 class="section-subtitle">Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <p class="section-item">UI Designer</p>
           </li>
         </ul>
       </section>
